@@ -34,3 +34,7 @@ This is a common procedure for both Windows and Linux.
 
 To run unit-tests, please install NUnit 2.5 or above. From within the NUnit
 GUI, open the project Avro.nunit and run the tests.
+
+3. Notes
+
+a. The LICENSE and NOTICE files in the lang/csharp source directory are used to build the binary distribution. The LICENSE and NOTICE information for the Avro C# source distribution is in the root directory.
